# Privacy-Protector-source-code

./: README.md
TPRE-Crypto/: tpre_test.cc  umbral_test.py
TPRE-Crypto/umbral/: __about__.py  __init__.py  capsule.py  capsule_frag.py  curve.py  curve_point.py  curve_scalar.py  dem.py  errors.py  hashing.py  key_frag.py  keys.py  openssl.py  params.py  pre.py  serializable.py  signing.py
TPRE-Crypto/yacl/: BUILD.bazel  README.md  capsule.cc  capsule.h  capsule_test.cc  hash.cc  hash.h  hash_test.cc  kdf.cc  kdf.h  kdf_test.cc  keys.cc  keys.h  keys_test.cc  tpre.cc  tpre.h  tpre_test.cc
back_end/cakeTry/: CMakeLists.txt  config.json  main.cc
back_end/cakeTry/controllers/: User_indexController.cc  User_indexController.h
back_end/cakeTry/dependency/: CMakeCache.txt  Makefile  cmake_install.cmake
back_end/cakeTry/dependency/test/: Makefile
back_end/cakeTry/dependency/yacl/: CMakeLists.txt  codeviz.dot
back_end/cakeTry/dependency/yacl/crypto/tpre/: codeviz.dot  keys.cc  keys.h
back_end/cakeTry/dependency/yacl/math/mpint/: mp_int_enforce.h
back_end/cakeTry/drogon/lib/inc/drogon/: version.h
back_end/cakeTry/test/: CMakeLists.txt
front_end_vue/: README.md  package-lock.json  package.json  vite.config.js
front_end_vue/src/: App.vue
front_end_vue/src/assets/css/: homePage.css  option1.css  option3.css  option4.css  visit&changeLog.css
front_end_vue/src/components/: header.vue  mainPage.vue  register.vue  userMenu.vue
front_end_vue/src/components/echarts/: changeLog.vue  echarts1.vue  echarts2.vue  visitorLog.vue
front_end_vue/src/components/options/: option1choice1.vue  option1choice2.vue
